--- a/pom.xml
+++ b/pom.xml
@@ -51,16 +51,15 @@
 
     <properties>
         <spring-boot.version>2.4.0</spring-boot.version>
-        <spring-cloud-openfeign.version>2.2.1.RELEASE</spring-cloud-openfeign.version>
         <gbif-cli.version>0.14</gbif-cli.version>
         <gbif-common.version>0.47</gbif-common.version>
-        <gbif-common-ws.version>1.9</gbif-common-ws.version>
         <dwc-api.version>1.29</dwc-api.version>
         <dwca-io.version>2.8</dwca-io.version>
         <metainf-services.version>1.5</metainf-services.version>
-        <feign.version>10.4.0</feign.version>
         <wagon-ssh.version>2.4</wagon-ssh.version>
         <guava.version>17.0</guava.version>
+        <javax-el.version>2.2.4</javax-el.version>
+        <commons-exec.version>1.3</commons-exec.version>
     </properties>
 
     <dependencyManagement>
@@ -93,11 +92,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>${spring-cloud-openfeign.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.gbif.common</groupId>
@@ -118,7 +112,7 @@
         <dependency>
             <groupId>org.gbif</groupId>
             <artifactId>gbif-common-ws</artifactId>
-            <version>${gbif-common-ws.version}</version>
+            <version>1.10</version>
         </dependency>
         <dependency>
             <groupId>org.gbif</groupId>
@@ -143,37 +137,25 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-core</artifactId>
-            <version>${feign.version}</version>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>${javax-el.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-slf4j</artifactId>
-            <version>${feign.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-hystrix</artifactId>
-            <version>${feign.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-jackson</artifactId>
-            <version>${feign.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>${javax-el.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>${commons-exec.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
