--- a/pom.xml
+++ b/pom.xml
@@ -50,16 +50,22 @@
     </distributionManagement>
 
     <properties>
-        <spring-boot.version>2.4.0</spring-boot.version>
+        <!-- GBIF dependencies -->
         <gbif-cli.version>0.14</gbif-cli.version>
         <gbif-common.version>0.47</gbif-common.version>
         <dwc-api.version>1.29</dwc-api.version>
         <dwca-io.version>2.8</dwca-io.version>
+
+        <!-- Third party dependencies -->
+        <spring-boot.version>2.4.0</spring-boot.version>
         <metainf-services.version>1.5</metainf-services.version>
         <wagon-ssh.version>2.4</wagon-ssh.version>
         <guava.version>17.0</guava.version>
         <javax-el.version>2.2.4</javax-el.version>
         <commons-exec.version>1.3</commons-exec.version>
+
+        <!-- Other -->
+        <main.basedir>${project.basedir}</main.basedir>
     </properties>
 
     <dependencyManagement>
@@ -227,6 +233,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
