--- a/pom.xml
+++ b/pom.xml
@@ -57,48 +57,21 @@
         <dwca-io.version>2.8</dwca-io.version>
 
         <!-- Third party dependencies -->
-        <spring-boot.version>2.4.0</spring-boot.version>
         <metainf-services.version>1.5</metainf-services.version>
         <wagon-ssh.version>2.4</wagon-ssh.version>
         <guava.version>17.0</guava.version>
-        <javax-el.version>2.2.4</javax-el.version>
         <commons-exec.version>1.3</commons-exec.version>
+        <postgresql.version>42.2.18</postgresql.version>
+        <hikaricp.version>3.4.5</hikaricp.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
+        <jakarta.el.version>3.0.3</jakarta.el.version>
 
         <!-- Other -->
         <main.basedir>${project.basedir}</main.basedir>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
-        <!-- Spring dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.gbif.common</groupId>
             <artifactId>gbif-cli</artifactId>
@@ -117,11 +90,6 @@
         </dependency>
         <dependency>
             <groupId>org.gbif</groupId>
-            <artifactId>gbif-common-ws</artifactId>
-            <version>1.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.gbif</groupId>
             <artifactId>dwc-api</artifactId>
             <version>${dwc-api.version}</version>
         </dependency>
@@ -134,10 +102,12 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
+            <version>${hikaricp.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
@@ -151,18 +121,19 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>javax.el-api</artifactId>
-            <version>${javax-el.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>javax.el</artifactId>
-            <version>${javax-el.version}</version>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>${jakarta.el.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -216,13 +187,6 @@
                         </filter>
                     </filters>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <version>${spring-boot.version}</version>
-                    </dependency>
-                </dependencies>
                 <executions>
                     <execution>
                         <phase>package</phase>
