Remove cloudera repository, use https

--- a/pom.xml
+++ b/pom.xml
@@ -23,29 +23,22 @@
     <repositories>
         <repository>
             <id>gbif-all</id>
-            <url>http://repository.gbif.org/content/groups/gbif</url>
+            <url>https://repository.gbif.org/content/groups/gbif/</url>
         </repository>
         <repository>
             <id>gbif-thirdparty</id>
-            <url>http://repository.gbif.org/content/repositories/thirdparty/</url>
-        </repository>
-        <repository>
-            <id>cloudera-release</id>
-            <url>http://repository.cloudera.com/artifactory/cloudera-repos/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <url>https://repository.gbif.org/content/repositories/thirdparty/</url>
         </repository>
     </repositories>
 
     <distributionManagement>
         <repository>
             <id>gbif-release</id>
-            <url>http://repository.gbif.org/content/repositories/releases</url>
+            <url>https://repository.gbif.org/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
             <id>gbif-snapshot</id>
-            <url>http://repository.gbif.org/content/repositories/snapshots</url>
+            <url>https://repository.gbif.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
