--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      # Java 11 setup
+      - name: Java 11 setup
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'jetbrains'
 
       - name: Spotless
         run: mvn spotless:apply
 
-      # Java 11 is required for google-java-format v1.8
-      - name: Java 11 setup
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11'
-
       - name: Google Java Format
-        uses: axel-op/googlejavaformat-action@v3.6.0
+        uses: axel-op/googlejavaformat-action@v4.0.0
         with:
           args: --replace --skip-javadoc-formatting --skip-sorting-imports --skip-reflowing-long-strings
-          version: 1.8
